Fixed issue with cosine computation

--- a/app/templates/pages/tos.html
+++ b/app/templates/pages/tos.html
@@ -6,10 +6,36 @@
     <div class="col-md-6">
        <h3>Terms of Service</h3>
 
-         Coming soon!
+       <p>Welcome to PeARS!</p>
+       <p>These Terms of Service (or 'Terms') govern your use of PeARS, except where we state that other terms apply. They also provide information about the PeARS Service (the 'Service'). When you create a PeARS account or use PeARS on SITENAME ('this Site'), you agree to these terms.</p>
 
-         <h4>Server Rules</h4>
-         <h4>Funding</h4>
+       <p>The PeARS Service on this Site is provided by ORGANISATION. These Terms of Service constitute an agreement between yourself and COMPANY.</p>
+
+       <h4>Impressum</h4>
+
+       <h4>Funding</h4>
+       <p>There are no ads on this Site. We rely on donations to provide the Service.</p> 
+
+       <h4>Your commitments</h4>
+       <h6>You cannot use this site for an unlawful or unauthorized purpose, or in a way that interfers with the operation of the Service.</h6>
+       <p>This includes creating accounts automatically, or collecting data from the site in a way that would impair the Service. It also includes adding harmful links to our index.</p>
+
+       <h6>You cannot post content that infringes the rights of other copyright holders, or violates their confidentiality.</h6>
+       <p>You confirm that your have the copyright holder's permission for any content you post, under applicable law.</p>
+
+       <h6>You cannot post content that discriminates against others, on grounds of ethnicity, nationality, gender, sexual orientaton or religion.</h6>
+
+       <h4>The rights you give to us</h4>
+       <h6>You give us a non-exclusive license to use your content on this Site.</h6>
+       <p>You grant us a non-exclusive, transferable, sub-licensable, worldwide license to host, use, distribute, modify, run, copy, publicly perform or display, translate, and create derivative works of your content for purposes of making the Service available.</p>
+
+       <h4>Content and account removal</h4>
+       <h6>We can remove any content you post on the Service if we believe it to interfer with the Service or to violate these Terms of Service.</h6>
+       
+       <h6>If you repeatedly violate these Terms of Service, we reserve the right to delete your account.</h6>
+       
+       <h6>If you think we have removed your account in error, contact us using the email provided in our Impressum.</h6>
+
 
        </div>
   </div> <!-- /row -->
