--- a/app/templates/orchard/annotate.html
+++ b/app/templates/orchard/annotate.html
@@ -33,7 +33,7 @@ SPDX-License-Identifier: AGPL-3.0-only
       </div><!-- card body -->
       <div class="card-footer clearfix">
         <span class="input-group-btn">
-        <input id="submit_button" type="submit" class="btn btn-success" value="Send report">
+        <input id="submit_button" type="submit" class="btn btn-success" value="Add comment">
       </div><!-- card footer -->
     </form>
     </div>
