--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -8,14 +8,15 @@
 :root {
     --primary-color: orange;
     --secondary-color: green;
+    --link-color: #414141;
     --hover-color: black;
  } 
 
 a {
-  color: var(--primary-color);
+  color: var(--link-color);
 }
 a:hover {
-  color: var(--secondary-color);
+  color: var(--hover-color);
 }
 
 .walkthrough a {
