Added Babel translations for German

--- a/app/templates/auth/confirm_email.html
+++ b/app/templates/auth/confirm_email.html
@@ -1,8 +1,7 @@
 <p>
-  Welcome! Thanks for signing up. Please follow this link to activate your
-  account:
+{{gettext("Welcome! Thanks for signing up. Please follow this link to activate your account:")}}
 </p>
 <p><a href="{{ confirm_url }}">{{ confirm_url }}</a></p>
 <br />
-<p>Cheers!</p>
+<p>{{gettext("We are looking forward to seeing you on this PeARS instance!")}}</p>
 
