--- a/app/templates/auth/password_change.html
+++ b/app/templates/auth/password_change.html
@@ -8,7 +8,7 @@
   <div class="row">
   <div class="col-sm-6">
     <div class="card">
-      <div class="card-header text-center"><b>Enter a new password</b></div>
+	    <div class="card-header text-center"><b>{{gettext('Enter a new password')}}</b></div>
       <div class="card-body">
 	{% with messages = get_flashed_messages() %}
         {% if messages %}
@@ -24,11 +24,11 @@
       </div><!-- card body -->
       <div class="card-footer clearfix">
         <span class="input-group-btn">
-	<input id="submit_button" type="submit" class="btn btn-success" value="Change password">
+		<input id="submit_button" type="submit" class="btn btn-success" value="{{gettext('Change password')}}">
       </div><!-- card footer -->
     </form>
     </div>
-    <br><p>Return to the  <a href={{url_for('auth.login')}}>login page</a>.</p>
+    <br><p>{{gettext("Return to the <a href='../login/'>login page</a>.")}}</p>
  </div>
  </div>
  </div>
