--- a/app/templates/auth/inactive.html
+++ b/app/templates/auth/inactive.html
@@ -3,7 +3,7 @@
 {% block body %}
 
 <div class="text-center">
-  <h1>Welcome!</h1>
+	<h1>{{gettext("Welcome!")}}</h1>
 	{% with messages = get_flashed_messages() %}
         {% if messages %}
             <div class="notification is-danger">
@@ -13,12 +13,11 @@
         {% endwith %}
   <br />
   <p>
-    You have not confirmed your account. Please check your inbox (and your spam
-    folder) - you should have received an email with a confirmation link.
+  {{gettext("You have not confirmed your account. Please check your inbox (and your spam folder) - you should have received an email with a confirmation link.")}}
   </p>
   <p>
-    Didn't get the email?
-    <a href="{{ url_for('auth.resend_confirmation') }}">Resend</a>.
+  {{gettext("Didn't get the email?")}}
+  <a href="{{ url_for('auth.resend_confirmation') }}">{{gettext("Resend")}}</a>.
   </p>
 </div>
 
