--- a/app/templates/auth/password_forgotten.html
+++ b/app/templates/auth/password_forgotten.html
@@ -9,7 +9,7 @@
   <div class="row">
   <div class="col-sm-6">
     <div class="card">
-      <div class="card-header text-center"><b>Forgotten your password? No problem!</b></div>
+	    <div class="card-header text-center"><b>{{gettext("Forgotten your password? No problem!")}}</b></div>
       <div class="card-body">
 	{% with messages = get_flashed_messages() %}
         {% if messages %}
@@ -24,7 +24,7 @@
       </div><!-- card body -->
       <div class="card-footer clearfix">
         <span class="input-group-btn">
-	<input id="submit_button" type="submit" class="btn btn-success" value="Send link">
+		<input id="submit_button" type="submit" class="btn btn-success" value="{{gettext('Send link')}}">
       </div><!-- card footer -->
     </form>
     </div>
