--- a/app/templates/auth/password_reset_email.html
+++ b/app/templates/auth/password_reset_email.html
@@ -1,7 +1,6 @@
-<p>
-Hi there! We are sending you this email because you have requested to reset your password. If the request did not originate from you, please ignore this email. Otherwise, use the link below to choose a new password.
-</p>
+<p>{{gettext("Hi there!")}}</p> 
+<p>{{gettext("We are sending you this email because you have requested to reset your password. If the request did not originate from you, please ignore this email. Otherwise, use the link below to choose a new password.")}}</p>
 <p><a href="{{ confirm_url }}">{{ confirm_url }}</a></p>
-<br />
-<p>Cheers!</p>
+<br>
+<p>{{gettext("See you soon on our PeARS instance again!")}}</p>
 
