--- a/app/templates/base/_formhelpers.html
+++ b/app/templates/base/_formhelpers.html
@@ -15,7 +15,7 @@
 
 {% macro render_password_field(field) %}
 <div class="form-group">
-	{{ field.label }} <a class="small" href={{url_for('auth.password_forgotten')}}>Password forgotten?</a> 
+	{{ field.label }} <a class="small" href={{url_for('auth.password_forgotten')}}>{{gettext('Password forgotten?')}}</a> 
         {{ field(class_="form-control input-s", size=32) }}
 </div>
 <dd>{% if field.errors %}
