--- a/app/templates/orchard/index.html
+++ b/app/templates/orchard/index.html
@@ -12,10 +12,10 @@ SPDX-License-Identifier: AGPL-3.0-only
     <div class="col-md-10 p-3" style="padding-left: 20px; display:flex;  flex-direction: row;  flex-wrap: wrap;  margin-bottom: 45px;">
       {% for p in pears %}
       <div class="card bg-light mb-3" style="width: 18rem; margin:20px">
-	    <div class="card-header"><b>Pod: {{p[0]}}</b></div>
+	      <div class="card-header"><b>{{gettext("Theme:")}} {{p[0]}}</b></div>
             <div class="card-body">
-	    <p class="card-text">{{p[1]}} entries.</p>
-	    <a href="{{url_for('orchard.get_a_pod')}}?pod={{p[0]}}" class="btn btn-success">View</a>
+		    <p class="card-text">{{p[1]}} {{gettext("entries")}}.</p>
+		    <a href="{{url_for('orchard.get_a_pod')}}?pod={{p[0]}}" class="btn btn-success">{{gettext("View")}}</a>
       </div>
       </div>
       {% endfor %}
