--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -29,6 +29,11 @@ a:hover {
 
 .card {
   --bs-card-border-width: 0px;
+  border-width: 0px 0px 0px 0px;
+}
+
+.card.indexer {
+  --bs-card-border-width: 0px;
   border-width: 1px 1px 1px 1px;
 }
 
