--- a/app/templates/indexer/index.html
+++ b/app/templates/indexer/index.html
@@ -18,7 +18,7 @@ SPDX-License-Identifier: AGPL-3.0-only
   
   <div class="row p-3">
     <div class="card-group">
-      <div class="card">
+      <div class="card indexer">
         <div class="card-header text-center"><b>{{gettext("Index a single URL")}}</b></div>
         <div class="card-body">
         {% with messages = get_flashed_messages() %}
@@ -48,7 +48,7 @@ SPDX-License-Identifier: AGPL-3.0-only
   </div>
 
   <div class="row p-3">
-    <div class="card">
+    <div class="card indexer">
 	    <div class="card-header text-center"><b>{{gettext("Add an offline resource")}}</b></div>
       <div class="card-body">
         {% with messages = get_flashed_messages() %}
