--- a/app/templates/orchard/index.html
+++ b/app/templates/orchard/index.html
@@ -9,14 +9,33 @@ SPDX-License-Identifier: AGPL-3.0-only
 <div class="container-full">
   <br><br>
   <div class="row">
-    <div class="col-md-10 p-3" style="padding-left: 20px; display:flex;  flex-direction: row;  flex-wrap: wrap;  margin-bottom: 45px;">
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+      <div class="notification is-danger">
+      <b>{{ messages[0] }}</b><br>
+      </div>
+    {% endif %}
+    {% endwith %}
+    <div class="col-md-12 p-3" style="padding-left: 20px; display:flex;  flex-direction: row;  flex-wrap: wrap;  margin-bottom: 45px;">
       {% for p in pears %}
       <div class="card bg-light mb-3" style="width: 18rem; margin:20px">
 	      <div class="card-header"><b>{{gettext("Theme:")}} {{p[0]}}</b></div>
             <div class="card-body">
 		    <p class="card-text">{{p[1]}} {{gettext("entries")}}.</p>
 		    <a href="{{url_for('orchard.get_a_pod')}}?pod={{p[0]}}" class="btn btn-success">{{gettext("View")}}</a>
-      </div>
+	      <button class="btn btn-link collapsed" data-bs-toggle="collapse" data-bs-target="#collapse{{p[2]}}" aria-expanded="false" aria-controls="collapse{{p[2]}}"><span class="results-emoji">🖊️  </span></button>
+            </div>
+            <div class="card card-body">
+	      <div class="collapse" id="collapse{{p[2]}}">
+		      <form  action="{{url_for('orchard.rename_pod')}}" id='renameform'>
+                  <div class="input-group group mt-4" >
+		  <input type="hidden" value="{{p[0]}}" name="oldname" />
+	          <input class="form-control" title="Rename theme" placeholder="{{gettext('Rename theme')}}"  type="search" name='newname' required>
+         	  <button class="btn btn-lg btn-success" type="submit" id='searchbutton'>{{gettext('Rename')}}</button>
+                  </div>
+                </form>
+              </div>
+            </div>
       </div>
       {% endfor %}
     </div>
