--- a/app/templates/orchard/index.html
+++ b/app/templates/orchard/index.html
@@ -20,11 +20,13 @@ SPDX-License-Identifier: AGPL-3.0-only
       {% for p in pears %}
       <div class="card bg-light mb-3" style="width: 18rem; margin:20px">
 	      <div class="card-header"><b>{{gettext("Theme:")}} {{p[0]}}</b></div>
-            <div class="card-body">
-		    <p class="card-text">{{p[1]}} {{gettext("entries")}}.</p>
-		    <a href="{{url_for('orchard.get_a_pod')}}?pod={{p[0]}}" class="btn btn-success">{{gettext("View")}}</a>
-	      <button class="btn btn-link collapsed" data-bs-toggle="collapse" data-bs-target="#collapse{{p[2]}}" aria-expanded="false" aria-controls="collapse{{p[2]}}"><span class="results-emoji">🖊️  </span></button>
-            </div>
+                <div class="card-body">
+	          <p class="card-text">{{p[1]}} {{gettext("entries")}}.</p>
+		  <a href="{{url_for('orchard.get_a_pod')}}?pod={{p[0]}}" class="btn btn-success">{{gettext("View")}}</a>
+		  {% if p[0] != 'Tips' %}
+	          <button class="btn btn-link collapsed" data-bs-toggle="collapse" data-bs-target="#collapse{{p[2]}}" aria-expanded="false" aria-controls="collapse{{p[2]}}"><span class="results-emoji">🖊️  </span></button>
+		  {% endif %}
+              </div>
             <div class="card card-body">
 	      <div class="collapse" id="collapse{{p[2]}}">
 		      <form  action="{{url_for('orchard.rename_pod')}}" id='renameform'>
