--- a/app/templates/indexer/index.html
+++ b/app/templates/indexer/index.html
@@ -28,7 +28,7 @@ SPDX-License-Identifier: AGPL-3.0-only
             </div>
         {% endif %}
         {% endwith %}
-	<form method="POST" accept-charset="UTF-8" action="{{url_for('indexer.from_url')}}" enctype="multipart/form-data">
+	<form method="POST" accept-charset="UTF-8" action="{{url_for('indexer.index_from_url')}}" enctype="multipart/form-data">
         {{ form1.hidden_tag() }}
         <p>{{ render_field(form1.url) }}</p>
         <p>{{ render_field(form1.theme) }}</p>
@@ -58,7 +58,7 @@ SPDX-License-Identifier: AGPL-3.0-only
             </div>
         {% endif %}
         {% endwith %}
-      <form method="POST" action="/indexer/manual" enctype="multipart/form-data">
+	<form method="POST" action="{{url_for('indexer.index_from_manual')}}" enctype="multipart/form-data">
         {{ form2.hidden_tag() }}
         <p>{{ render_field(form2.title) }}</p>
         <p>{{ render_field(form2.description) }}</p>
